apps/base/vpn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
  labels:
    vpn-gateway: 'true'
