apps/base/vpn/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vpn-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          vpn-gateway: true
    ports:
    # OpenVPN
    - protocol: TCP
      port: 1194
  egress:
  - to: []
    ports:
    # DNS
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53 
    # OpenVPN
    - protocol: UDP
      port: 1194
